--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Setup
-title:            Hyde
+title:            Diogo Pires
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://hyde.getpoole.com
+url:              https://diogolpires.github.io
 baseurl:          ''
 paginate:         5
 
 # About and contact
 author:
-  name:           'Mark Otto'
+  name:           'Diogo Pires'
   url:            https://twitter.com/mdo
 
 # Gems
@@ -17,4 +17,4 @@ plugins:
   - jekyll-gist
 
 # Custom vars
-version:          3.0.0
+version:          1.0.0
