--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:            Diogo L. Pires
 tagline:          'Personal page'
-description:      'PhD candidate <a href="https://www.city.ac.uk/about/people/academics/diogo-pires#" target="_blank">@CityUniLondon</a> and Marie Curie Fellow <a href="https://evogamesplus.eu" target="_blank">@EvoGamesPlus</a>.'
+description:      ''#'PhD candidate <a href="https://www.city.ac.uk/about/people/academics/diogo-pires#" target="_blank">@CityUniLondon</a> and Marie Curie Fellow <a href="https://evogamesplus.eu" target="_blank">@EvoGamesPlus</a>.'
 url:              https://diogolpires.github.io
 #baseurl:          ''
 paginate:         5
